--- a/literaturliste_BA.bib
+++ b/literaturliste_BA.bib
@@ -145,7 +145,7 @@
 	urldate = {2019-05-20},
 	date = {2009-10-23},
 	langid = {english},
-	keywords = {Ecology, Phytoplankton, {BA}, Picoplankton, Canadian Basin},
+	keywords = {Ecology, Phytoplankton, {BA}, Picoplankton},
 	file = {Li et al. - 2009 - Smallest Algae Thrive As the Arctic Ocean Freshens.pdf:C\:\\Users\\David\\Zotero\\storage\\7ML8GPKP\\Li et al. - 2009 - Smallest Algae Thrive As the Arctic Ocean Freshens.pdf:application/pdf}
 }
 
@@ -261,6 +261,7 @@
 	urldate = {2019-06-04},
 	date = {2006-02},
 	langid = {english},
+	keywords = {Ecology, {BA}, Statistical Analysis, Biogeography, Microbiology},
 	file = {Martiny et al. - 2006 - Microbial biogeography putting microorganisms on .pdf:C\:\\Users\\David\\Zotero\\storage\\8UIZIAL9\\Martiny et al. - 2006 - Microbial biogeography putting microorganisms on .pdf:application/pdf}
 }
 
@@ -378,5 +379,372 @@
 	author = {Magurran, Anne E.},
 	date = {1988},
 	note = {{OCLC}: 220408258},
-	keywords = {Ecology, {BA}, Statistical Analysis, Microorganisms, Similarity Indices}
+	keywords = {Ecology, {BA}, Statistical Analysis, Similarity Indices, Microbiology}
+}
+
+@article{chao_new_2004,
+	title = {A new statistical approach for assessing similarity of species composition with incidence and abundance data: A new statistical approach for assessing similarity},
+	volume = {8},
+	issn = {1461023X, 14610248},
+	url = {http://doi.wiley.com/10.1111/j.1461-0248.2004.00707.x},
+	doi = {10.1111/j.1461-0248.2004.00707.x},
+	shorttitle = {A new statistical approach for assessing similarity of species composition with incidence and abundance data},
+	abstract = {The classic Jaccard and Sørensen indices of compositional similarity (and other indices that depend upon the same variables) are notoriously sensitive to sample size, especially for assemblages with numerous rare species. Further, because these indices are based solely on presence–absence data, accurate estimators for them are unattainable. We provide a probabilistic derivation for the classic, incidence-based forms of these indices and extend this approach to formulate new Jaccard-type or Sørensen-type indices based on species abundance data. We then propose estimators for these indices that include the effect of unseen shared species, based on either (replicated) incidence- or abundancebased sample data. In sampling simulations, these new estimators prove to be considerably less biased than classic indices when a substantial proportion of species are missing from samples. Based on species-rich empirical datasets, we show how incorporating the effect of unseen shared species not only increases accuracy but also can change the interpretation of results.},
+	pages = {148--159},
+	number = {2},
+	journaltitle = {Ecology Letters},
+	author = {Chao, Anne and Chazdon, Robin L. and Colwell, Robert K. and Shen, Tsung-Jen},
+	urldate = {2019-06-05},
+	date = {2004-12-17},
+	langid = {english},
+	file = {Chao et al. - 2004 - A new statistical approach for assessing similarit.pdf:C\:\\Users\\David\\Zotero\\storage\\Y2TILBV2\\Chao et al. - 2004 - A new statistical approach for assessing similarit.pdf:application/pdf}
+}
+
+@article{hanson_beyond_2012,
+	title = {Beyond biogeographic patterns: processes shaping the microbial landscape},
+	volume = {10},
+	issn = {1740-1526, 1740-1534},
+	url = {http://www.nature.com/articles/nrmicro2795},
+	doi = {10.1038/nrmicro2795},
+	shorttitle = {Beyond biogeographic patterns},
+	abstract = {Recently, microbiologists have established the existence of biogeographic patterns among a wide range of microorganisms. The focus of the field is now shifting to identifying the mechanisms that shape these patterns. Here, we propose that four processes — selection, drift, dispersal and mutation — create and maintain microbial biogeographic patterns on inseparable ecological and evolutionary scales. We consider how the interplay of these processes affects one biogeographic pattern, the distance–decay relationship, and review evidence from the published literature for the processes driving this pattern in microorganisms. Given the limitations of inferring processes from biogeographic patterns, we suggest that studies should focus on directly testing the underlying processes.},
+	pages = {497--506},
+	number = {7},
+	journaltitle = {Nature Reviews Microbiology},
+	shortjournal = {Nat Rev Microbiol},
+	author = {Hanson, China A. and Fuhrman, Jed A. and Horner-Devine, M. Claire and Martiny, Jennifer B. H.},
+	urldate = {2019-06-06},
+	date = {2012-07},
+	langid = {english},
+	file = {Hanson et al. - 2012 - Beyond biogeographic patterns processes shaping t.pdf:C\:\\Users\\David\\Zotero\\storage\\IB5M45IW\\Hanson et al. - 2012 - Beyond biogeographic patterns processes shaping t.pdf:application/pdf}
+}
+
+@article{green_spatial_2006,
+	title = {Spatial scaling of microbial biodiversity},
+	volume = {21},
+	issn = {01695347},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S016953470600200X},
+	doi = {10.1016/j.tree.2006.06.012},
+	pages = {501--507},
+	number = {9},
+	journaltitle = {Trends in Ecology \& Evolution},
+	shortjournal = {Trends in Ecology \& Evolution},
+	author = {Green, Jessica and Bohannan, Brendan J.M.},
+	urldate = {2019-06-06},
+	date = {2006-09},
+	langid = {english},
+	file = {Green and Bohannan - 2006 - Spatial scaling of microbial biodiversity.pdf:C\:\\Users\\David\\Zotero\\storage\\U5YYGAAQ\\Green and Bohannan - 2006 - Spatial scaling of microbial biodiversity.pdf:application/pdf}
+}
+
+@article{nemergut_patterns_2013,
+	title = {Patterns and Processes of Microbial Community Assembly},
+	volume = {77},
+	issn = {1092-2172},
+	url = {http://mmbr.asm.org/cgi/doi/10.1128/MMBR.00051-12},
+	doi = {10.1128/MMBR.00051-12},
+	pages = {342--356},
+	number = {3},
+	journaltitle = {Microbiology and Molecular Biology Reviews},
+	shortjournal = {Microbiology and Molecular Biology Reviews},
+	author = {Nemergut, D. R. and Schmidt, S. K. and Fukami, T. and O'Neill, S. P. and Bilinski, T. M. and Stanish, L. F. and Knelman, J. E. and Darcy, J. L. and Lynch, R. C. and Wickey, P. and Ferrenberg, S.},
+	urldate = {2019-06-06},
+	date = {2013-09-01},
+	langid = {english},
+	file = {Nemergut et al. - 2013 - Patterns and Processes of Microbial Community Asse.pdf:C\:\\Users\\David\\Zotero\\storage\\IND49NQL\\Nemergut et al. - 2013 - Patterns and Processes of Microbial Community Asse.pdf:application/pdf}
+}
+
+@article{ramette_multivariate_2007,
+	title = {Multivariate analyses in microbial ecology: Multivariate analyses in microbial ecology},
+	volume = {62},
+	issn = {01686496, 15746941},
+	url = {https://academic.oup.com/femsec/article-lookup/doi/10.1111/j.1574-6941.2007.00375.x},
+	doi = {10.1111/j.1574-6941.2007.00375.x},
+	shorttitle = {Multivariate analyses in microbial ecology},
+	abstract = {Environmental microbiology is undergoing a dramatic revolution due to the increasing accumulation of biological information and contextual environmental parameters. This will not only enable a better identiﬁcation of diversity patterns, but will also shed more light on the associated environmental conditions, spatial locations, and seasonal ﬂuctuations, which could explain such patterns. Complex ecological questions may now be addressed using multivariate statistical analyses, which represent a vast potential of techniques that are still underexploited. Here, well-established exploratory and hypothesis-driven approaches are reviewed, so as to foster their addition to the microbial ecologist toolbox. Because such tools aim at reducing data set complexity, at identifying major patterns and putative causal factors, they will certainly ﬁnd many applications in microbial ecology.},
+	pages = {142--160},
+	number = {2},
+	journaltitle = {{FEMS} Microbiology Ecology},
+	author = {Ramette, Alban},
+	urldate = {2019-06-06},
+	date = {2007-11},
+	langid = {english},
+	file = {Ramette - 2007 - Multivariate analyses in microbial ecology Multiv.pdf:C\:\\Users\\David\\Zotero\\storage\\EKVTHXDA\\Ramette - 2007 - Multivariate analyses in microbial ecology Multiv.pdf:application/pdf}
+}
+
+@article{martiny_drivers_2011,
+	title = {Drivers of bacterial -diversity depend on spatial scale},
+	volume = {108},
+	issn = {0027-8424, 1091-6490},
+	url = {http://www.pnas.org/cgi/doi/10.1073/pnas.1016308108},
+	doi = {10.1073/pnas.1016308108},
+	pages = {7850--7854},
+	number = {19},
+	journaltitle = {Proceedings of the National Academy of Sciences},
+	shortjournal = {Proceedings of the National Academy of Sciences},
+	author = {Martiny, J. B. H. and Eisen, J. A. and Penn, K. and Allison, S. D. and Horner-Devine, M. C.},
+	urldate = {2019-06-06},
+	date = {2011-05-10},
+	langid = {english},
+	file = {Martiny et al. - 2011 - Drivers of bacterial -diversity depend on spatial .pdf:C\:\\Users\\David\\Zotero\\storage\\MVWLS5YY\\Martiny et al. - 2011 - Drivers of bacterial -diversity depend on spatial .pdf:application/pdf}
+}
+
+@article{horner-devine_ecological_2004,
+	title = {An ecological perspective on bacterial biodiversity},
+	volume = {271},
+	issn = {1471-2954},
+	url = {http://www.royalsocietypublishing.org/doi/10.1098/rspb.2003.2549},
+	doi = {10.1098/rspb.2003.2549},
+	pages = {113--122},
+	number = {1535},
+	journaltitle = {Proceedings of the Royal Society of London. Series B: Biological Sciences},
+	shortjournal = {Proceedings of the Royal Society of London. Series B: Biological Sciences},
+	author = {Horner-Devine, M. Claire and Carney, Karen M. and Bohannan, Brendan J. M.},
+	urldate = {2019-06-06},
+	date = {2004-01-22},
+	langid = {english},
+	keywords = {Review, Ecology, {BA}, Biogeography, Microbiology},
+	file = {Horner-Devine et al. - 2004 - An ecological perspective on bacterial biodiversit.pdf:C\:\\Users\\David\\Zotero\\storage\\UQYBBSWH\\Horner-Devine et al. - 2004 - An ecological perspective on bacterial biodiversit.pdf:application/pdf}
+}
+
+@article{lindstrom_local_2012,
+	title = {Local and regional factors influencing bacterial community assembly: Bacterial community assembly},
+	volume = {4},
+	issn = {17582229},
+	url = {http://doi.wiley.com/10.1111/j.1758-2229.2011.00257.x},
+	doi = {10.1111/j.1758-2229.2011.00257.x},
+	shorttitle = {Local and regional factors influencing bacterial community assembly},
+	abstract = {The classical view states that microbial biogeography is not affected by dispersal barriers or historical events, but only inﬂuenced by the local contemporary habitat conditions (species sorting). This has been challenged during recent years by studies suggesting that also regional factors such as mass effect, dispersal limitation and neutral assembly are important for the composition of local bacterial communities. Here we summarize results from biogeography studies in different environments, i.e. in marine, freshwater and soil as well in human hosts. Species sorting appears to be the most important mechanism. However, this result might be biased since this is the mechanism that is easiest to measure, detect and interpret. Hence, the importance of regional factors may have been underestimated. Moreover, our survey indicates that different assembly mechanisms might be important for different parts of the total community, differing, for example, between generalists and specialists, and between taxa of different dispersal ability and motility. We conclude that there is a clear need for experimental studies, ﬁrst, to clearly separate regional and local factors in order to study their relative importance, and second, to test whether there are differences in assembly mechanisms depending on different taxonomic or functional groups.},
+	pages = {1--9},
+	number = {1},
+	journaltitle = {Environmental Microbiology Reports},
+	author = {Lindström, Eva S. and Langenheder, Silke},
+	urldate = {2019-06-06},
+	date = {2012-02},
+	langid = {english},
+	file = {Lindström and Langenheder - 2012 - Local and regional factors influencing bacterial c.pdf:C\:\\Users\\David\\Zotero\\storage\\ZWGZN2GA\\Lindström and Langenheder - 2012 - Local and regional factors influencing bacterial c.pdf:application/pdf}
+}
+
+@article{pommier_global_2006,
+	title = {Global patterns of diversity and community structure in marine bacterioplankton},
+	volume = {16},
+	issn = {09621083, 1365294X},
+	url = {http://doi.wiley.com/10.1111/j.1365-294X.2006.03189.x},
+	doi = {10.1111/j.1365-294X.2006.03189.x},
+	shorttitle = {Global patterns of diversity and community structure in marine bacterioplankton},
+	abstract = {Because of their small size, great abundance and easy dispersal, it is often assumed that marine planktonic microorganisms have a ubiquitous distribution that prevents any structured assembly into local communities. To challenge this view, marine bacterioplankton communities from coastal waters at nine locations distributed world-wide were examined through the use of comprehensive clone libraries of 16S ribosomal {RNA} genes, used as operational taxonomic units ({OTU}). Our survey and analyses show that there were marked differences in the composition and richness of {OTUs} between locations. Remarkably, the global marine bacterioplankton community showed a high degree of endemism, and conversely included few cosmopolitan {OTUs}. Our data were consistent with a latitudinal gradient of {OTU} richness. We observed a positive relationship between the relative {OTU} abundances and their range of occupation, i.e. cosmopolitans had the largest population sizes. Although {OTU} richness differed among locations, the distributions of the major taxonomic groups represented in the communities were analogous, and all local communities were similarly structured and dominated by a few {OTUs} showing variable taxonomic affiliations. The observed patterns of {OTU} richness indicate that similar evolutionary and ecological processes structured the communities. We conclude that marine bacterioplankton share many of the biogeographical and macroecological features of macroscopic organisms. The general processes behind those patterns are likely to be comparable across taxa and major global biomes.},
+	pages = {867--880},
+	number = {4},
+	journaltitle = {Molecular Ecology},
+	author = {Pommier, T. and Canbäck, B. and Riemann, L. and Boström, K. H. and Simu, K. and Lundberg, P. and Tunlid, A. and Hagström, Å.},
+	urldate = {2019-06-06},
+	date = {2006-12-12},
+	langid = {english},
+	keywords = {Ecology, {BA}, Picoplankton, Biogeography, Microbiology},
+	file = {Pommier et al. - 2006 - Global patterns of diversity and community structu.pdf:C\:\\Users\\David\\Zotero\\storage\\9YC93PYL\\Pommier et al. - 2006 - Global patterns of diversity and community structu.pdf:application/pdf}
+}
+
+@article{reche_does_2005,
+	title = {Does ecosystem size determine aquatic bacterial richness?},
+	volume = {86},
+	issn = {0012-9658},
+	url = {http://doi.wiley.com/10.1890/04-1587},
+	doi = {10.1890/04-1587},
+	abstract = {With the advent of {DNA}-based molecular technologies, microbial ecologists now have the tools to test whether general ecological patterns apply to microorganisms. In this study, we selected 11 high-mountain lakes from Sierra Nevada (Spain) to test the predictions of island-biogeography theory in relation to ecosystem size and isolation, and to assess the inﬂuence of other factors (i.e., ecosystem productivity, resource richness, and biotic interactions) on bacterial community structure. Bacterial operational taxonomic units ({OTUs}), generated by denaturing-gradient gel electrophoresis of polymerase chain-reactionampliﬁed 16S {rRNA} genes, were used as a surrogate of predominant ‘‘biodiversity units.’’ {OTU} composition among lakes was heterogeneous, and the number of site-speciﬁc {OTUs} was near 50\%. Lake remoteness did not affect the number of bacterial {OTUs} although the spatial distribution of the lakes signiﬁcantly inﬂuenced bacterial composition. Lakes that were closer together had more similar bacterial ﬁngerprints. We found a consistent positive association between bacterial {OTU} richness and lake area. The slope of this relationship (0.161 Ϯ 0.026, including literature data) was similar to slopes obtained for organisms with high dispersion rates.},
+	pages = {1715--1722},
+	number = {7},
+	journaltitle = {Ecology},
+	shortjournal = {Ecology},
+	author = {Reche, Isabel and Pulido-Villena, Elvira and Morales-Baquero, Rafael and Casamayor, Emilio O.},
+	urldate = {2019-06-06},
+	date = {2005-07},
+	langid = {english},
+	keywords = {Ecology, Limnology, {BA}, Picoplankton, Biogeography, Microbiology},
+	file = {Reche et al. - 2005 - DOES ECOSYSTEM SIZE DETERMINE AQUATIC BACTERIAL RI.pdf:C\:\\Users\\David\\Zotero\\storage\\XHKEV6UR\\Reche et al. - 2005 - DOES ECOSYSTEM SIZE DETERMINE AQUATIC BACTERIAL RI.pdf:application/pdf}
+}
+
+@article{nold_patterns_nodate,
+	title = {Patterns and governing forces in aquatic microbial communities},
+	abstract = {In this review we survey recent publications employing molecular techniques to investigate the distribution of microbial species in aquatic environments. We analyzed the occurrence of microbial phyla in freshwater and marine habitats and observed patterns of distribution that could be explained by the adaptation of microorganisms to physical and biological parameters that vary in aquatic habitats. The gram-positive bacteria, the Verrucomicrobiales and the α- and γ -subdivisions of the Proteobacteria are distributed throughout a range of aquatic habitats, while other phylogenetic groups appear to be adapted to more narrowly deﬁned environmental niches such as anoxic water and sediments (δ-Proteobacteria) or ﬂoating aggregates (Cytophaga-Flexibacter-Bacteroides phylum). βproteobacterial sequence types have been detected throughout freshwater habitats, but these organisms are largely absent from open ocean environments. Within several of these divisions, clusters of closely related small subunit ribosomal {RNA} sequence types have been detected in geographically disparate environments, suggesting that some microbial species are globally distributed. In addition to physical variables such as salinity and {pH}, biological variables also inﬂuence microbial community composition. This was illustrated by changes that occurred in the eukaryotic and bacterial species composition in laboratory mesocosms after a viral outburst. We conclude that physical and biological forces govern the composition of aquatic microbial communities and result in divergent evolutionary histories of the indigenous microbial species.},
+	pages = {20},
+	author = {Nold, Stephen C and Zwart, Gabriel},
+	langid = {english},
+	file = {Nold and Zwart - Patterns and governing forces in aquatic microbial.pdf:C\:\\Users\\David\\Zotero\\storage\\L9KWHWI7\\Nold and Zwart - Patterns and governing forces in aquatic microbial.pdf:application/pdf}
+}
+
+@article{torsvik_prokaryotic_2002,
+	title = {Prokaryotic Diversity--Magnitude, Dynamics, and Controlling Factors},
+	volume = {296},
+	issn = {00368075, 10959203},
+	url = {http://www.sciencemag.org/cgi/doi/10.1126/science.1071698},
+	doi = {10.1126/science.1071698},
+	pages = {1064--1066},
+	number = {5570},
+	journaltitle = {Science},
+	author = {Torsvik, V.},
+	urldate = {2019-06-07},
+	date = {2002-05-10},
+	langid = {english},
+	file = {Torsvik - 2002 - Prokaryotic Diversity--Magnitude, Dynamics, and Co.pdf:C\:\\Users\\David\\Zotero\\storage\\67M9AK3C\\Torsvik - 2002 - Prokaryotic Diversity--Magnitude, Dynamics, and Co.pdf:application/pdf}
+}
+
+@article{fenchel_biogeography_2003,
+	title = {Biogeography for Bacteria},
+	volume = {301},
+	issn = {0036-8075, 1095-9203},
+	url = {http://www.sciencemag.org/cgi/doi/10.1126/science.1089242},
+	doi = {10.1126/science.1089242},
+	shorttitle = {{MICROBIOLOGY}},
+	pages = {925--926},
+	number = {5635},
+	journaltitle = {Science},
+	shortjournal = {Science},
+	author = {Fenchel, T.},
+	urldate = {2019-06-09},
+	date = {2003-08-15},
+	langid = {english},
+	file = {Fenchel - 2003 - MICROBIOLOGY Biogeography for Bacteria.pdf:C\:\\Users\\David\\Zotero\\storage\\7B34IHZX\\Fenchel - 2003 - MICROBIOLOGY Biogeography for Bacteria.pdf:application/pdf}
+}
+
+@article{horner-devine_taxaarea_2004,
+	title = {A taxa–area relationship for bacteria},
+	volume = {432},
+	issn = {0028-0836, 1476-4687},
+	url = {http://www.nature.com/articles/nature03073},
+	doi = {10.1038/nature03073},
+	pages = {750--753},
+	number = {7018},
+	journaltitle = {Nature},
+	shortjournal = {Nature},
+	author = {Horner-Devine, M. Claire and Lage, Melissa and Hughes, Jennifer B. and Bohannan, Brendan J. M.},
+	urldate = {2019-06-09},
+	date = {2004-12},
+	langid = {english},
+	file = {Horner-Devine et al. - 2004 - A taxa–area relationship for bacteria.pdf:C\:\\Users\\David\\Zotero\\storage\\WBUXI8JH\\Horner-Devine et al. - 2004 - A taxa–area relationship for bacteria.pdf:application/pdf}
+}
+
+@article{horner-devine_ecological_2004-1,
+	title = {An ecological perspective on bacterial biodiversity},
+	volume = {271},
+	issn = {1471-2954},
+	url = {http://www.royalsocietypublishing.org/doi/10.1098/rspb.2003.2549},
+	doi = {10.1098/rspb.2003.2549},
+	pages = {113--122},
+	number = {1535},
+	journaltitle = {Proceedings of the Royal Society of London. Series B: Biological Sciences},
+	shortjournal = {Proceedings of the Royal Society of London. Series B: Biological Sciences},
+	author = {Horner-Devine, M. Claire and Carney, Karen M. and Bohannan, Brendan J. M.},
+	urldate = {2019-06-09},
+	date = {2004-01-22},
+	langid = {english},
+	file = {Horner-Devine et al. - 2004 - An ecological perspective on bacterial biodiversit.pdf:C\:\\Users\\David\\Zotero\\storage\\GCAKB2UX\\Horner-Devine et al. - 2004 - An ecological perspective on bacterial biodiversit.pdf:application/pdf}
+}
+
+@article{claire_horner-devine_bacterial_2003,
+	title = {Bacterial diversity patterns along a gradient of primary productivity: Bacterial diversity and primary productivity},
+	volume = {6},
+	issn = {1461023X, 14610248},
+	url = {http://doi.wiley.com/10.1046/j.1461-0248.2003.00472.x},
+	doi = {10.1046/j.1461-0248.2003.00472.x},
+	shorttitle = {Bacterial diversity patterns along a gradient of primary productivity},
+	abstract = {Primary productivity is a key determinant of biodiversity patterns in plants and animals but has not previously been shown to affect bacterial diversity. We examined the relationship between productivity and bacterial richness in aquatic mesocosms designed to mimic small ponds. We observed that productivity could inﬂuence the composition and richness of bacterial communities. We showed that, even within the same system, different bacterial taxonomic groups could exhibit different responses to changes in productivity. The richness of members of the Cytophaga-Flavobacteria-Bacteroides group exhibited a signiﬁcant hump-shaped relationship with productivity, as is often observed for plant and animal richness in aquatic systems. In contrast, we observed a signiﬁcant U-shaped relationship between richness and productivity for a-proteobacteria and no discernable relationship for b-proteobacteria. We show, for the first time, that bacterial diversity varies along a gradient of primary productivity and thus make an important step towards understanding processes responsible for the maintenance of bacterial biodiversity.},
+	pages = {613--622},
+	number = {7},
+	journaltitle = {Ecology Letters},
+	author = {Claire Horner-Devine, M. and Leibold, Mathew A. and Smith, Val H. and Bohannan, Brendan J. M.},
+	urldate = {2019-06-09},
+	date = {2003-06-13},
+	langid = {english},
+	file = {Claire Horner-Devine et al. - 2003 - Bacterial diversity patterns along a gradient of p.pdf:C\:\\Users\\David\\Zotero\\storage\\M8MGUGRI\\Claire Horner-Devine et al. - 2003 - Bacterial diversity patterns along a gradient of p.pdf:application/pdf}
+}
+
+@article{staley_poles_1999,
+	title = {Poles Apart: Biodiversity and Biogeography of Sea Ice Bacteria},
+	volume = {53},
+	issn = {0066-4227, 1545-3251},
+	url = {http://www.annualreviews.org/doi/10.1146/annurev.micro.53.1.189},
+	doi = {10.1146/annurev.micro.53.1.189},
+	shorttitle = {Poles Apart},
+	pages = {189--215},
+	number = {1},
+	journaltitle = {Annual Review of Microbiology},
+	shortjournal = {Annu. Rev. Microbiol.},
+	author = {Staley, James T. and Gosink, John J.},
+	urldate = {2019-06-10},
+	date = {1999-10},
+	langid = {english},
+	file = {Staley and Gosink - 1999 - Poles Apart Biodiversity and Biogeography of Sea .pdf:C\:\\Users\\David\\Zotero\\storage\\WXGX3D44\\Staley and Gosink - 1999 - Poles Apart Biodiversity and Biogeography of Sea .pdf:application/pdf}
+}
+
+@article{fadeev_microbial_2018,
+	title = {Microbial Communities in the East and West Fram Strait During Sea Ice Melting Season},
+	volume = {5},
+	issn = {2296-7745},
+	url = {https://www.frontiersin.org/article/10.3389/fmars.2018.00429/full},
+	doi = {10.3389/fmars.2018.00429},
+	abstract = {Climate models project that the Arctic Ocean may experience ice-free summers by the second half of this century. This may have severe repercussions on phytoplankton bloom dynamics and the associated cycling of carbon in surface waters. We currently lack baseline knowledge of the seasonal dynamics of Arctic microbial communities, which is needed in order to better estimate the effects of such changes on ecosystem functioning. Here we present a comparative study of polar summer microbial communities in the ice-free (eastern) and ice-covered (western) hydrographic regimes at the {LTER} {HAUSGARTEN} in Fram Strait, the main gateway between the Arctic and North Atlantic Oceans. Based on measured and modeled biogeochemical parameters, we tentatively identiﬁed two different ecosystem states (i.e., different phytoplankton bloom stages) in the distinct regions. Using Illumina tag-sequencing, we determined the community composition of both free-living and particle-associated bacteria as well as microbial eukaryotes in the photic layer. Despite substantial horizontal mixing by eddies in Fram Strait, pelagic microbial communities showed distinct differences between the two regimes, with a proposed early spring (pre-bloom) community in the ice-covered western regime (with higher representation of {SAR}11, {SAR}202, {SAR}406 and eukaryotic {MALVs}) and a community indicative of late summer conditions (post-bloom) in the icefree eastern regime (with higher representation of Flavobacteria, Gammaproteobacteria and eukaryotic heterotrophs). Co-occurrence networks revealed speciﬁc taxon-taxon associations between bacterial and eukaryotic taxa in the two regions. Our results suggest that the predicted changes in sea ice cover and phytoplankton bloom dynamics will have a strong impact on bacterial community dynamics and potentially on biogeochemical cycles in this region.},
+	pages = {429},
+	journaltitle = {Frontiers in Marine Science},
+	shortjournal = {Front. Mar. Sci.},
+	author = {Fadeev, Eduard and Salter, Ian and Schourup-Kristensen, Vibe and Nöthig, Eva-Maria and Metfies, Katja and Engel, Anja and Piontek, Judith and Boetius, Antje and Bienhold, Christina},
+	urldate = {2019-06-11},
+	date = {2018-11-22},
+	langid = {english},
+	keywords = {new},
+	file = {Fadeev et al. - 2018 - Microbial Communities in the East and West Fram St.pdf:C\:\\Users\\David\\Zotero\\storage\\7UPCVPTB\\Fadeev et al. - 2018 - Microbial Communities in the East and West Fram St.pdf:application/pdf}
+}
+
+@article{engel_inter-annual_2017,
+	title = {Inter-annual variability of transparent exopolymer particles in the Arctic Ocean reveals high sensitivity to ecosystem changes},
+	volume = {7},
+	issn = {2045-2322},
+	url = {http://www.nature.com/articles/s41598-017-04106-9},
+	doi = {10.1038/s41598-017-04106-9},
+	pages = {4129},
+	number = {1},
+	journaltitle = {Scientific Reports},
+	shortjournal = {Sci Rep},
+	author = {Engel, Anja and Piontek, Judith and Metfies, Katja and Endres, Sonja and Sprong, Pim and Peeken, Ilka and Gäbler-Schwarz, Steffi and Nöthig, Eva-Maria},
+	urldate = {2019-06-11},
+	date = {2017-12},
+	langid = {english},
+	keywords = {new},
+	file = {Engel et al. - 2017 - Inter-annual variability of transparent exopolymer.pdf:C\:\\Users\\David\\Zotero\\storage\\4YMS8Z6D\\Engel et al. - 2017 - Inter-annual variability of transparent exopolymer.pdf:application/pdf}
+}
+
+@article{metfies_biogeography_2016,
+	title = {Biogeography and Photosynthetic Biomass of Arctic Marine Pico-Eukaroytes during Summer of the Record Sea Ice Minimum 2012},
+	volume = {11},
+	issn = {1932-6203},
+	url = {https://dx.plos.org/10.1371/journal.pone.0148512},
+	doi = {10.1371/journal.pone.0148512},
+	pages = {e0148512},
+	number = {2},
+	journaltitle = {{PLOS} {ONE}},
+	shortjournal = {{PLoS} {ONE}},
+	author = {Metfies, Katja and von Appen, Wilken-Jon and Kilias, Estelle and Nicolaus, Anja and Nöthig, Eva-Maria},
+	editor = {Vopel, Kay C.},
+	urldate = {2019-06-11},
+	date = {2016-02-19},
+	langid = {english},
+	keywords = {new},
+	file = {Metfies et al. - 2016 - Biogeography and Photosynthetic Biomass of Arctic .pdf:C\:\\Users\\David\\Zotero\\storage\\QEIYBIEM\\Metfies et al. - 2016 - Biogeography and Photosynthetic Biomass of Arctic .pdf:application/pdf}
+}
+
+@article{soltwedel_natural_2016-1,
+	title = {Natural variability or anthropogenically-induced variation? Insights from 15 years of multidisciplinary observations at the arctic marine {LTER} site {HAUSGARTEN}},
+	volume = {65},
+	issn = {1470160X},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S1470160X15005361},
+	doi = {10.1016/j.ecolind.2015.10.001},
+	shorttitle = {Natural variability or anthropogenically-induced variation?},
+	abstract = {Time-series studies of arctic marine ecosystems are rare. This is not surprising since polar regions are largely only accessible by means of expensive modern infrastructure and instrumentation. In 1999, the Alfred Wegener Institute, Helmholtz-Centre for Polar and Marine Research ({AWI}) established the {LTER} (Long-Term Ecological Research) observatory {HAUSGARTEN} crossing the Fram Strait at about 79◦ N. Multidisciplinary investigations covering all parts of the open-ocean ecosystem are carried out at a total of 21 permanent sampling sites in water depths ranging between 250 and 5500 m. From the outset, repeated sampling in the water column and at the deep seaﬂoor during regular expeditions in summer months was complemented by continuous year-round sampling and sensing using autonomous instruments in anchored devices (i.e., moorings and free-falling systems). The central {HAUSGARTEN} station at 2500 m water depth in the eastern Fram Strait serves as an experimental area for unique biological in situ experiments at the seaﬂoor, simulating various scenarios in changing environmental settings. Long-term ecological research at the {HAUSGARTEN} observatory revealed a number of interesting temporal trends in numerous biological variables from the pelagic system to the deep seaﬂoor. Contrary to common intuition, the entire ecosystem responded exceptionally fast to environmental changes in the upper water column. Major variations were associated with a Warm-Water-Anomaly evident in surface waters in eastern parts of the Fram Strait between 2005 and 2008. However, even after 15 years of intense time-series work at {HAUSGARTEN}, we cannot yet predict with complete certainty whether these trends indicate lasting alterations due to anthropologically-induced global environmental changes of the system, or whether they reﬂect natural variability on multiyear time-scales, for example, in relation to decadal oscillatory atmospheric processes.},
+	pages = {89--102},
+	journaltitle = {Ecological Indicators},
+	shortjournal = {Ecological Indicators},
+	author = {Soltwedel, Thomas and Bauerfeind, Eduard and Bergmann, Melanie and Bracher, Astrid and Budaeva, Nataliya and Busch, Kathrin and Cherkasheva, Alexandra and Fahl, Kirsten and Grzelak, Katarzyna and Hasemann, Christiane and Jacob, Marianne and Kraft, Angelina and Lalande, Catherine and Metfies, Katja and Nöthig, Eva-Maria and Meyer, Kirstin and Quéric, Nadia-Valérie and Schewe, Ingo and Włodarska-Kowalczuk, Maria and Klages, Michael},
+	urldate = {2019-06-11},
+	date = {2016-06},
+	langid = {english},
+	keywords = {new},
+	file = {Soltwedel et al. - 2016 - Natural variability or anthropogenically-induced v.pdf:C\:\\Users\\David\\Zotero\\storage\\XFAQT22X\\Soltwedel et al. - 2016 - Natural variability or anthropogenically-induced v.pdf:application/pdf}
 }
